# tafazzal-ai-voice-studio

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
src/tafazzal_ai_voice/: __init__.py  main.py  version.py
src/tafazzal_ai_voice/ai/: __init__.py  engine.py  google_ai.py  manager.py  openai_ai.py  provider.py
src/tafazzal_ai_voice/api/: __init__.py  app.py  responses.py  routes.py  schemas.py
src/tafazzal_ai_voice/audio/: __init__.py  audio_processor.py  converter.py  exporter.py  formats.py  processor.py
src/tafazzal_ai_voice/cli/: __init__.py  app.py  commands.py  parser.py
src/tafazzal_ai_voice/config/: __init__.py  settings.py
src/tafazzal_ai_voice/logging/: __init__.py  logger.py
src/tafazzal_ai_voice/utils/: __init__.py  file_utils.py  text_utils.py
src/tafazzal_ai_voice/voice/: __init__.py  engine.py  generator.py  manager.py  service.py  voices.py
