[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tafazzal-ai-voice-studio"
version = "0.1.0.dev0"
description = "Production-ready AI Voice Generation Studio"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Tafazzal Institute" }
]

keywords = [
    "ai",
    "voice",
    "text-to-speech",
    "tts",
    "python",
    "audio"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/tafazzalinstitute/tafazzal-ai-voice-studio"
Repository = "https://github.com/tafazzalinstitute/tafazzal-ai-voice-studio"
Issues = "https://github.com/tafazzalinstitute/tafazzal-ai-voice-studio/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true